--- a/Source/Enter.UI/Components/Tabs/EntMdiTab.razor
+++ b/Source/Enter.UI/Components/Tabs/EntMdiTab.razor
@@ -16,8 +16,8 @@
         KeepPanelAlive="@KeepPanelAlive"
         OnTabActivated="OnTabActivatedCallbackAsync"
         OnTabRemoved="OnTabRemovedCallback"
-        OnTabClosedClick="OnTabClosedCallback"
-        OnAllTabClosedClick="OnAllTabClosedCallback"
+        OnTabClosed="OnTabClosedCallback"
+        OnAllTabClosed="OnAllTabClosedCallback"
         OnTabAdded="OnTabAddedCallback">
     <ChildContent>
         @foreach (var item in _items)
