--- a/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/documents/mdi-tabs"
 @using Enter.Ui.Services
 @inherits Enter.Ui.Cores.Bases.EntPageBase
-@layout DocumentLayout2
+@layout DocumentLayout
 
 <EntMdiTab Tag="MdiTabPage" Responsive ItemDirection="EntTabItemDirection.Horizontal"
            @ref="MdiTab"
