--- a/example/Enter.Dashboard/Pages/Documents/ModalPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/ModalPage.razor
@@ -3,7 +3,7 @@
 @using Enter.Ui.Core
 @using Enter.Ui.Components.Flex
 @inherits Enter.Ui.Cores.Bases.EntPageBase
-@layout DocumentLayout2
+@layout DocumentLayout
 <div class="p-4">
     <EntCard Expandable="true" Title="Modals">
         <CardBody>
